--- a/DemoGame.html
+++ b/DemoGame.html
@@ -24,11 +24,28 @@
     <script type="text/javascript" src="lib/Box2d/Box2dWeb-2.1.a.3.js"></script>
     <script type="text/javascript" src="InputHandler.js"></script>
     <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="Wall.js"></script>
+    <script type="text/javascript" src="WebGLRenderer.js"></script>
     <script type="text/javascript" src="DemoGame.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             var game = new DemoGame({ useDebugDraw: true });
             game.init();       
         });
+    </script>
+    <script id="shader-fs" type="x-shader/x-fragment">
+        void main(void) {
+            gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+        }
+    </script>
+    <script id="shader-vs" type="x-shader/x-vertex">
+        attribute vec3 aVertexPosition;
+
+        uniform mat4 uMVMatrix;
+        uniform mat4 uPMatrix;
+      
+        void main(void) {
+            gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+        }
     </script>
 <html>
