add unstaged files

--- a/Client/DemoGame.html
+++ b/Client/DemoGame.html
@@ -19,14 +19,14 @@
         <canvas id="canvas" width="960" height="680" >
         </canvas>
     </body>
-    <script src="lib/jquery-1.10.2.js"></script>
-    <script type="text/javascript" src="lib/Box2d/Box2dWeb-2.1.a.3.js"></script>
-    <script type="text/javascript" src="InputHandler.js"></script>
+    <script src="../lib/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="../lib/Box2d/Box2dWeb-2.1.a.3.js"></script>
+    <script type="text/javascript" src="../Shared/InputHandler.js"></script>
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script type="text/javascript" src="WebGLRenderer.js"></script>
-    <script type="text/javascript" src="PhysicsManager.js"></script>
-    <script type="text/javascript" src="Player.js"></script>
-    <script type="text/javascript" src="Wall.js"></script>
+    <script type="text/javascript" src="../Shared/PhysicsManager.js"></script>
+    <script type="text/javascript" src="../Shared/Player.js"></script>
+    <script type="text/javascript" src="../Shared/Wall.js"></script>
     <script type="text/javascript" src="DemoGame.js"></script>
     <script type="text/javascript">
         var Settings = { 
