--- a/V2_Demo/DemoGame.html
+++ b/V2_Demo/DemoGame.html
@@ -24,9 +24,9 @@
     <script type="text/javascript" src="../Shared/InputHandler.js"></script>
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script type="text/javascript" src="WebGLRenderer.js"></script>
-    <script type="text/javascript" src="../Shared/PhysicsManager.js"></script>
-    <script type="text/javascript" src="../Shared/Player.js"></script>
-    <script type="text/javascript" src="../Shared/Wall.js"></script>
+    <script type="text/javascript" src="Box2DPhysicsManager.js"></script>
+    <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="Wall.js"></script>
     <script type="text/javascript" src="DemoGame.js"></script>
     <script type="text/javascript">
         var Settings = { 
