Let's start even simpler

--- a/Client-experimental/DemoGame.html
+++ b/Client-experimental/DemoGame.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Box2dWeb example</title>
+        <title>Client Demo</title>
         <style>
             * {
                 margin: 0;
@@ -20,13 +20,13 @@
         </canvas>
     </body>
     <script src="../lib/jquery-1.10.2.js"></script>
-    <script type="text/javascript" src="../lib/Box2d/Box2dWeb-2.1.a.3.js"></script>
-    <script type="text/javascript" src="../Shared/InputHandler.js"></script>
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script type="text/javascript" src="WebGLRenderer.js"></script>
+    <script type="text/javascript" src="../Shared/InputHandler.js"></script>
     <script type="text/javascript" src="../Shared/SimpleDerivative.js"></script>
     <script type="text/javascript" src="../Shared/SimpleState.js"></script>
     <script type="text/javascript" src="../Shared/SimpleBody.js"></script>
+    <script type="text/javascript" src="../Shared/SimpleBB.js"></script>
     <script type="text/javascript" src="../Shared/SimplePhysicsManager.js"></script>
     <script type="text/javascript" src="../Shared/Player.js"></script>
     <script type="text/javascript" src="../Shared/Wall.js"></script>
